feat(TDI-46484): Couchbase_for_PD (#665)
* feat(TDI-46484): first tests.

* feat(TDI-46484): more fixes and code adaptations.

* feat(TDI-46484): more corrections.

* feat(TDI-46484): new code formatting.